vmstat: Always emit a space after the free-memory column

When displaying in non-human form, if the free-memory number
is large (more than 7 digits), there is no space between it and
the page fault column.

PR:		221290
Submitted by:	Josuah Demangeon <mail@josuah.net> (Original version)

Former-commit-id: 12bc4f5c5d3156122952cab188d3e87743dea3a8